--- a/main.css
+++ b/main.css
@@ -15,10 +15,22 @@
 
 
 /* for medium screens */
-/*@media screen and (min-width:468px) {
-
+@media screen and (min-width:468px) {
+  .Grid {
+    display: Flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .Grid-cell {
+    flex: 0 0 45%;
+    background-color: #FF695E;
+    text-align: center;
+    border: 1px solid white;
+    margin: 10px;
+  }
 }
-*?;
+
 /* for large screens */
 /*@media screen and (min-width:992px) {
 
