--- a/main.css
+++ b/main.css
@@ -9,29 +9,26 @@
   flex: 0 0 95%;
   background-color: #FF695E;
   text-align: center;
-  border: 1px solid white;
   margin: 10px;
 }
 
 
 /* for medium screens */
 @media screen and (min-width:468px) {
-  .Grid {
-    display: Flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
   .Grid-cell {
     flex: 0 0 45%;
     background-color: #FF695E;
     text-align: center;
-    border: 1px solid white;
     margin: 10px;
   }
 }
 
 /* for large screens */
-/*@media screen and (min-width:992px) {
-
+@media screen and (min-width:992px) {
+  .Grid-cell {
+    flex: 0 0 23%;
+    background-color: #FF695E;
+    text-align: center;
+    margin: 10px;
+  }
 }
